<resources>
    <string name="app_name">Calcul Mental</string>
    <string name="textview">Calcul</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button0">0</string>
    <string name="buttonOk">Valider</string>
    <string name="easy">Facile</string>
    <string name="medium">Moyen</string>
    <string name="hard">Difficile</string>
    <string name="start">Démarrer les questions</string>
    <string name="play">Jouer</string>
    <string name="high_score">Meilleur Score</string>
    <string name="comma">,</string>
    <string name="delete">⌫</string>
    <string name="correct">Correct</string>
    <string name="score">Fin de la partie !\n\n\n Score</string>
    <string name="pseudo">Entrez votre nom</string>
    <string name="score_table">Tableau des scores</string>
    <string name="difficulty">Difficulté :</string>
    <string name="name">Pseudo</string>
    <string name="points">Score</string>
</resources>