<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameSettings">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/DifficultySelector"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
        </RadioGroup>

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>